--- a/client/src/app/_components/member-detail/member-detail.component.html
+++ b/client/src/app/_components/member-detail/member-detail.component.html
@@ -13,11 +13,11 @@
                 </div>
                 <div>
                     <strong>Member since: </strong>
-                    <p>{{member.created}}</p>
+                    <p>{{member.created | date:'dd-MM-yyyy'}}</p>
                 </div>
                 <div>
                     <strong>Last Active: </strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member.lastActive | date:'dd-MM-yyyy'}}</p>
                 </div>
              </div>
              <div class="card-footer">
