--- a/client/src/app/_components/member-edit/member-edit.component.html
+++ b/client/src/app/_components/member-edit/member-edit.component.html
@@ -42,13 +42,13 @@
                     <h4 class="mt-2">Looking for</h4>
                     <textarea class="form-control" [(ngModel)]="member.lookingFor" name="lookingFor" rows="6"></textarea>
                     <h4 class="mt-2">Intrests</h4>
-                    <textarea class="form-control" [(ngModel)]="member.interests" name="intrests" rows="6" ></textarea>
+                    <textarea class="form-control" [(ngModel)]="member.interests" name="interests" rows="6" ></textarea>
                     <h4 class="mt-2">Location Details:</h4>
                     <div class="form-inline">
                         <label for="city">City: </label>
                         <input class="form-control" [(ngModel)]="member.city" type="text" name="city" class="form-control mx-2">
                         <label for="country">Country: </label>
-                        <input class="form-control" [(ngModel)]="member.country" type="text" name="city" class="form-control mx-2">
+                        <input class="form-control" [(ngModel)]="member.country" type="text" name="country" class="form-control mx-2">
                     </div>
                 </form>
             </tab>
