--- a/client/src/app/_components/navbar/navbar.component.html
+++ b/client/src/app/_components/navbar/navbar.component.html
@@ -20,7 +20,8 @@
             </ul>
 
             <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-                <a class="dropdown-toggle text-login" dropdownToggle>Welcome {{user.username | titlecase}}</a>
+                <img src="{{user.profilePhotoUrl || './assets/user.png'}}" alt="">
+                <a class="dropdown-toggle text-login ml-3" dropdownToggle>Welcome {{user.username | titlecase}}</a>
                 <div class="dropdown-menu mt-3" *dropdownMenu>
                     <a href="" class="dropdown-item">Profile</a>
                     <a class="dropdown-item" routerLink="/member/edit">Edit</a>
