--- a/client/src/app/_components/photo-editor/photo-editor.component.html
+++ b/client/src/app/_components/photo-editor/photo-editor.component.html
@@ -2,8 +2,17 @@
     <div class="col-2" *ngFor="let photo of member.photos">
         <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1">
         <div class="text-center">
-            <button class="btn btn-sm">Main</button>
-            <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+            <button
+                [disabled]="photo.isMain"
+                (click)="setMainPhoto(photo)"
+                [ngClass]="photo.isMain ? 'btn-success active' : 'btn-outline-success'" 
+                class="btn btn-sm">
+            Main</button>
+            <button
+                [disabled]="photo.isMain"
+                (click)="deletePhoto(photo.id)"
+                class="btn btn-sm btn-danger"
+            ><i class="fa fa-trash"></i></button>
         </div>
     </div>
 </div>
@@ -53,7 +62,7 @@
         <div>
             <div>
                 Queue progress:
-                <div class="progress" style="">
+                <div class="progress">
                     <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
                 </div>
             </div>
