--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -14,13 +14,10 @@
                         <a class="nav-link" [routerLink]="['/messages']" routerLinkActive="router-link-active" >Messages</a>
                     </li>
                 </ng-container>
-                <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/errors']" routerLinkActive="router-link-active" >Errors</a>
-                </li>
             </ul>
 
             <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-                <img src="{{user.profilePhotoUrl || './assets/user.png'}}" alt="">
+                <img src="{{user.profilePhotoUrl || './assets/user.png'}}">
                 <a class="dropdown-toggle text-login ml-3" dropdownToggle>Welcome {{user.username | titlecase}}</a>
                 <div class="dropdown-menu mt-3" *dropdownMenu>
                     <a href="" class="dropdown-item">Profile</a>
