--- a/client/src/app/components/member-detail/member-detail.component.html
+++ b/client/src/app/components/member-detail/member-detail.component.html
@@ -12,12 +12,12 @@
                     <p>{{member.age}}</p>
                 </div>
                 <div>
-                    <strong>Member since: </strong>
-                    <p>{{member.created | date:'dd-MM-yyyy'}}</p>
+                    <strong>Last Active: </strong>
+                    <p>{{member.lastActive | timeago}}</p>
                 </div>
                 <div>
-                    <strong>Last Active: </strong>
-                    <p>{{member.lastActive | date:'dd-MM-yyyy'}}</p>
+                    <strong>Member since: </strong>
+                    <p>{{member.created | date:'dd. MMM, yyyy.'}}</p>
                 </div>
              </div>
              <div class="card-footer">
