--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
 
             <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
                 <img src="{{user.profilePhotoUrl || './assets/user.png'}}">
-                <a class="dropdown-toggle text-login ml-3" dropdownToggle>Welcome {{user.username | titlecase}}</a>
+                <a class="dropdown-toggle text-login ml-3" dropdownToggle>Welcome {{user.knownAs | titlecase}}</a>
                 <div class="dropdown-menu mt-3" *dropdownMenu>
                     <a href="" class="dropdown-item">Profile</a>
                     <a class="dropdown-item" routerLink="/member/edit">Edit</a>
