--- a/client/src/app/components/member-list/member-list.component.html
+++ b/client/src/app/components/member-list/member-list.component.html
@@ -23,7 +23,7 @@
             </select>
         </div>
 
-        <button class="btn btn-primary ml-1" type="submit">Applay Filters</button>
+        <button class="btn btn-primary ml-1" type="submit">Apply Filters</button>
         <button class="btn btn-info ml-1" type="submit" (click)="resetFilters()">Reset Filters</button>
         <div class="col">
             <div class="btn-group float-right">
