--- a/client/src/app/components/member-detail/member-detail.component.html
+++ b/client/src/app/components/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
- <div class="row" *ngIf="member">
+ <div class="row">
      <div class="col-4">
          <div class="card">
              <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
@@ -22,30 +22,30 @@
              </div>
              <div class="card-footer">
                  <div class="btn-group d-flex">
-                     <button class="btn btn-primary">Like</button>
-                     <button class="btn btn-secondary">Message</button>
+                     <button class="btn btn-primary" (click)="addLike(member)">Like</button>
+                     <button class="btn btn-secondary" (click)="selectTab(3)">Message</button>
                  </div>
              </div>
          </div>
      </div>
      <div class="col-8">
-         <tabset class="member-tabset">
-             <tab heading="About {{member.knownAs}}">
+         <tabset class="member-tabset" #memberTabs>
+             <tab heading="About {{member.knownAs}}" (selectTab)="onTabActivated($event)">
                  <h4>Description</h4>
                  <p>{{member.introduction}}</p>
                  <h4>Looking for</h4>
                  <p>{{member.lookingFor}}</p>
              </tab>
-             <tab heading="Intrests">
+             <tab heading="Intrests" (selectTab)="onTabActivated($event)">
                 <h4>Intrests</h4>
                 <p>{{member.interests}}</p>
             </tab>
-            <tab heading="Photos">
+            <tab heading="Photos" (selectTab)="onTabActivated($event)">
                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"
                style="display: inline-block; margin-bottom: 20px;"></ngx-gallery> 
             </tab>
-            <tab heading="Messages">
-                <p>Messages go here</p>
+            <tab heading="Messages" (selectTab)="onTabActivated($event)">
+                <app-member-messages [messages]="messages"></app-member-messages>
             </tab>
          </tabset>
      </div>
