--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -5,20 +5,23 @@
             <ul class="navbar-nav mr-auto">
                 <ng-container *ngIf="accountService.currentUser$ | async">    
                     <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/members']" routerLinkActive="router-link-active" >Matches</a>
+                        <a class="nav-link" [routerLink]="['/members']" routerLinkActive="active" >Matches</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="router-link-active" >Lists</a>
+                        <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="active" >Lists</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/messages']" routerLinkActive="router-link-active" >Messages</a>
+                        <a class="nav-link" [routerLink]="['/messages']" routerLinkActive="active" >Messages</a>
+                    </li>
+                    <li class="nav-item" *appHasRole="['Admin', 'Moderator']">
+                        <a class="nav-link" [routerLink]="['/admin']" routerLinkActive="active" >Admin</a>
                     </li>
                 </ng-container>
             </ul>
 
             <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
                 <img src="{{user.profilePhotoUrl || './assets/user.png'}}">
-                <a class="dropdown-toggle text-login ml-3" dropdownToggle>Welcome {{user.knownAs | titlecase}}</a>
+                <a class="dropdown-toggle text-login ml-3" dropdownToggle>Welcome {{user.knownAs || user.username | titlecase}}</a>
                 <div class="dropdown-menu mt-3" *dropdownMenu>
                     <a href="" class="dropdown-item">Profile</a>
                     <a class="dropdown-item" routerLink="/member/edit">Edit</a>
