--- a/client/src/app/components/member-messages/member-messages.component.html
+++ b/client/src/app/components/member-messages/member-messages.component.html
@@ -1,10 +1,10 @@
 <div class="card">
     <div class="card-body">
-        <div *ngIf="messages?.length === 0">
+        <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
             No messages yet
         </div>
-        <ul class="chat" *ngIf="messages?.length > 0">
-            <li *ngFor="let message of messages">
+        <ul class="chat" *ngIf="(messageService.messageThread$ | async)?.length > 0">
+            <li *ngFor="let message of (messageService.messageThread$ | async)">
                 <span class="chat-img float-right">
                     <img src="{{message.senderPhotoUrl || './assets/user.png'}}" alt="{{message.senderUsername}}" class="rounded-circle">
                 </span>
