--- a/client/src/app/components/member-messages/member-messages.component.html
+++ b/client/src/app/components/member-messages/member-messages.component.html
@@ -3,7 +3,11 @@
         <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
             No messages yet
         </div>
-        <ul class="chat" *ngIf="(messageService.messageThread$ | async)?.length > 0">
+        <ul #scrollMe
+            style="overflow: scroll; height: 500px;"
+            [scrollTop]="scrollMe.scrollHeight"
+            class="chat" 
+            *ngIf="(messageService.messageThread$ | async)?.length > 0">
             <li *ngFor="let message of (messageService.messageThread$ | async)">
                 <span class="chat-img float-right">
                     <img src="{{message.senderPhotoUrl || './assets/user.png'}}" alt="{{message.senderUsername}}" class="rounded-circle">
