--- a/client/src/app/components/photo-editor/photo-editor.component.css
+++ b/client/src/app/components/photo-editor/photo-editor.component.css
@@ -11,3 +11,14 @@ img.img-thumbnail {
 input[type=file]{
     columns: transparent;
 }
+
+.greyed-out {
+    opacity: 0.3;
+}
+
+.img-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
