--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -23,7 +23,7 @@
                 <img src="{{user.profilePhotoUrl || './assets/user.png'}}">
                 <a class="dropdown-toggle text-login ml-3" dropdownToggle>Welcome {{user.knownAs || user.username | titlecase}}</a>
                 <div class="dropdown-menu mt-3" *dropdownMenu>
-                    <a href="" class="dropdown-item">Profile</a>
+                    <a href="" class="dropdown-item" [routerLink]="['/members', user.username]">Profile</a>
                     <a class="dropdown-item" routerLink="/member/edit">Edit</a>
                     <a href="" class="dropdown-item" (click)="logout()">Logout</a>
                 </div>
