--- a/client/src/app/components/not-found/not-found.component.html
+++ b/client/src/app/components/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<div class="container">
-    <h1>Not Found</h1>
-    <button class="btn btn-info btn-lg" routerLink="/">Return to home page</button>
+<div class="container text-center" style="margin-top: 25%;">
+    <h1>404 Not Found</h1>
+    <p>There is nothing here!</p>
 </div>
