--- a/client/src/app/components/server-error/server-error.component.html
+++ b/client/src/app/components/server-error/server-error.component.html
@@ -7,7 +7,7 @@
         <li>Open the browser's dev tool</li>
         <li>Inspect the network tab</li>
         <li>Check the failing request</li>
-        <li>Examine the request URL - check if it\'s correct</li>
+        <li>Examine the request URL - check if it's correct</li>
         <li>Reproduce the error in Postman</li>
     </ol>
     <p>Following is the stack trace:</p>
