--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
         <h1>Find your match</h1>
         <p class="lead">Let's go and view your matches.. all you need to do is to sign up!</p>
         <div class="text-center">
-            <button class="btn btn-primary btn-lg mr-2" (click)="registerToggle()">Register</button>
+            <button id="registerBtn" class="btn btn-primary btn-lg mr-2" (click)="registerToggle()">Register</button>
             <button class="btn btn-info btn-lg">Learn more</button>
         </div>
     </div>
