--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -20,7 +20,7 @@
     <app-text-input [formControl]="registerForm.controls['password']" [label]="'Password'" [type]="'password'"></app-text-input>
     <app-text-input [formControl]="registerForm.controls['confirmPassword']" [label]="'Confirm password'" [type]="'password'"></app-text-input>
 
-    <div class="row" *ngIf="validationErrors.length > 0">
+    <div id='errorsDiv' class="row" *ngIf="validationErrors.length > 0">
         <ul class="text-danger">
             <li *ngFor="let error of validationErrors">
                 {{error}}
@@ -30,6 +30,6 @@
 
     <div class="form-group text-center">
         <button [disabled]="!registerForm.valid" class="btn btn-success mr-2" type="submit">Register</button>
-        <button class="btn btn-secondary mr-2" type="button" (click)="cancel()">Cancel</button>
+        <button id='cancelBtn' class="btn btn-secondary mr-2" type="button" (click)="cancel()">Cancel</button>
     </div>
 </form>
