--- a/client/src/app/components/member/member-card/member-card.component.html
+++ b/client/src/app/components/member/member-card/member-card.component.html
@@ -4,7 +4,7 @@
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item"><button class="btn btn-primary" routerLink="/members/{{member.username}}">
                 <i class="fa fa-user"></i></button></li>
-            <li class="list-inline-item"><button class="btn btn-primary" (click)="addLike(member)">
+            <li class="list-inline-item"><button class="btn btn-primary" id="likeBtn" (click)="addLike(member)">
                 <i class="fa fa-heart"></i></button></li>
             <li class="list-inline-item">
                 <button 
@@ -16,7 +16,7 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1">
-            <span [class.is-online]="(presence.onlineUsers$ | async).includes(member.username)">
+            <span class="user-text" [class.is-online]="(presence.onlineUsers$ | async).includes(member.username)">
                 <i class="fa fa-user mr-2"></i>
                 {{member.knownAs}}, {{member.age}}
             </span>
