--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="container-fluid">
             <a class="navbar-brand" [routerLink]="['/']">Dating App</a>
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto" id='userLinks'>
                 <ng-container *ngIf="accountService.currentUser$ | async">    
                     <li class="nav-item">
                         <a class="nav-link" [routerLink]="['/members']" routerLinkActive="active" >Matches</a>
@@ -19,7 +19,7 @@
                 </ng-container>
             </ul>
 
-            <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+            <div id="userMenu" class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
                 <img src="{{user.profilePhotoUrl || './assets/user.png'}}">
                 <a class="dropdown-toggle text-login ml-3" dropdownToggle>Welcome {{user.knownAs || user.username | titlecase}}</a>
                 <div class="dropdown-menu mt-3" *dropdownMenu>
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <form #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off" *ngIf="(accountService.currentUser$ | async) === null">
+            <form id='loginform'#loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off" *ngIf="(accountService.currentUser$ | async) === null">
                 <input
                     name="username"
                     [(ngModel)]="creds.username" 
