[Test] member list and messages components tested

--- a/client/src/app/components/member/member-messages/member-messages.component.html
+++ b/client/src/app/components/member/member-messages/member-messages.component.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="card-footer">
-        <form #messageForm="ngForm" (ngSubmit)="sendMessage()" autocomplete="off">
+        <form #messageForm="ngForm" (ngSubmit)="sendMessage()" id="messageForm" autocomplete="off">
             <div class="input-group">
                 <input
                     name="messageContent"
