--- a/client/src/app/components/member/member-list/member-list.component.html
+++ b/client/src/app/components/member/member-list/member-list.component.html
@@ -24,7 +24,7 @@
         </div>
 
         <button class="btn btn-primary ml-1" type="submit">Apply Filters</button>
-        <button class="btn btn-info ml-1" type="submit" (click)="resetFilters()">Reset Filters</button>
+        <button class="btn btn-info ml-1" type="submit" id="resetFiltersBtn" (click)="resetFilters()">Reset Filters</button>
         <div class="col">
             <div class="btn-group float-right">
                 <button
