--- a/client/src/app/components/member/photo-editor/photo-editor.component.html
+++ b/client/src/app/components/member/photo-editor/photo-editor.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-2" *ngFor="let photo of member.photos">
+    <div class="col-2" *ngFor="let photo of member.photos" id="photo{{photo.id}}">
         <div>
             <img 
                 src="{{photo.url}}" 
@@ -13,12 +13,12 @@
                 [disabled]="photo.isMain || !photo.isApproved"
                 (click)="setMainPhoto(photo)"
                 [ngClass]="photo.isMain ? 'btn-success active' : 'btn-outline-success'" 
-                class="btn btn-sm">
+                class="btn btn-sm main-photo-btn">
             Main</button>
             <button
                 [disabled]="photo.isMain"
                 (click)="deletePhoto(photo.id)"
-                class="btn btn-sm btn-danger"
+                class="btn btn-sm btn-danger delete-photo-btn"
             ><i class="fa fa-trash"></i></button>
         </div>
     </div>
