--- a/client/src/app/components/admin/photo-management/photo-management.component.html
+++ b/client/src/app/components/admin/photo-management/photo-management.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div *ngFor="let photo of photosToApprove" class="col-2">
+    <div *ngFor="let photo of photosToApprove" class="col-2" id="photo{{photo.id}}">
         <div class="card mb-4">
             <h4 class="card-title text-center mb-1"> {{photo.username}}</h4>
             <div class="card-img-wrapper">
