--- a/client/src/app/components/member/member-card/member-card.component.html
+++ b/client/src/app/components/member/member-card/member-card.component.html
@@ -2,13 +2,13 @@
     <div class="card-img-wrapper">
         <img src="{{member.photoUrl || './assets/user.png'}} " alt="{{member.knownAs}}" class="card-img-top">
         <ul class="list-inline member-icons animate text-center">
-            <li class="list-inline-item"><button class="btn btn-primary" routerLink="/members/{{member.username}}">
+            <li class="list-inline-item"><button class="btn btn-info" routerLink="/members/{{member.username}}">
                 <i class="fa fa-user"></i></button></li>
             <li class="list-inline-item"><button class="btn btn-primary" id="likeBtn" (click)="addLike(member)">
                 <i class="fa fa-heart"></i></button></li>
             <li class="list-inline-item">
                 <button 
-                    class="btn btn-primary"
+                    class="btn btn-warning"
                     routerLink="/members/{{member.username}}"
                     [queryParams]="{tab: 3}">
                 <i class="fa fa-envelope"></i></button></li>
