--- a/client/src/app/components/member/member-detail/member-detail.component.html
+++ b/client/src/app/components/member/member-detail/member-detail.component.html
@@ -30,11 +30,15 @@
             <div class="card-footer">
                 <div class="btn-group d-flex">
                     <ng-container *ngIf="member.username != user.username && member.relationTo != 'BLOCKED'">
-                        <button class="btn btn-primary" (click)="addLike()">Like</button>
-                        <button class="btn btn-secondary" (click)="selectTab(3)">Message</button>
-                        <button class="btn btn-danger" (click)="blockUser()">Block</button>
+                        <button class="btn btn-primary" (click)="addLike()" *ngIf="member.relationTo === null">
+                            <i class="fa fa-heart"></i>   Like</button>
+                        <button class="btn btn-primary" (click)="removeLike()" *ngIf="member.relationTo === 'LIKED'">
+                            <i class="fa fa-heart-o" aria-hidden="true"></i>   Unlike</button>
+                        <button class="btn btn-warning" (click)="selectTab(3)"><i class="fa fa-envelope"></i>   Message</button>
+                        <button class="btn btn-danger" (click)="blockUser()"><i class="fa fa-ban" aria-hidden="true"></i>   Block</button>
                     </ng-container>
-                    <button class="btn btn-primary" *ngIf="member.username == user.username" routerLink="/member/edit">Edit</button>
+                    <button class="btn btn-primary" *ngIf="member.username == user.username" routerLink="/member/edit">
+                        <i class="fa fa-pencil-square-o" aria-hidden="true"></i>   Edit</button>
                 </div>
             </div>
         </div>
@@ -64,7 +68,7 @@
         </tabset>
 
         <div *ngIf="member.relationTo === 'BLOCKED'" class="align-self-center">
-            <h2 class="text-center">Unblock To view member photos and details:</h2>
+            <h2 class="text-center"><i class="fa fa-lock" aria-hidden="true"></i>   Unblock To view member photos and details:</h2>
             <div class="d-flex btn-group">
                 <button class="btn btn-outline-danger" (click)="unblock()">Unblock</button>
             </div>
