[Feature] Login with google

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -5,6 +5,10 @@
         <div class="text-center">
             <button id="registerBtn" class="btn btn-primary btn-lg mr-2" (click)="registerToggle()">Register</button>
             <button class="btn btn-info btn-lg">Learn more</button>
+            <button class="btn btn-success btn-lg ml-2" type="button" (click)="signInGoogle()">
+                <i class="fa-google fa"></i>
+                Google</button>
+            <button class="btn btn-info btn-lg" (click)="signOut()">Log out</button>
         </div>
     </div>
 
