[BugFix] Fix getting profile picture from server using google login

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
         <button class="btn btn-info btn-lg">Learn more</button>
     </div>
     <div class="container text-center" *ngIf="!registerMode">
-        <h2>Login</h2>
+        <h2 class="text-primary">Login</h2>
         <form id='loginform' #loginForm="ngForm" class="ngForm mt-2" (ngSubmit)="login()" autocomplete="off">
             <div class="form-group">
                 <input
