[Frontend] Added branding and logo to app, setted up titles for every component

--- a/client/src/app/components/navbar/navbar.component.css
+++ b/client/src/app/components/navbar/navbar.component.css
@@ -6,8 +6,12 @@
     color: white;
 }
 
-img {
+.profile-avatar {
     max-height: 50px;
-    border: 2px solid #fff;
     display: inline;
+}
+
+.navbar-brand{
+    font-size: 30px;
+    font-family: 'Brush Script MT', cursive;
 }
