--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-5 d-flex">
-    <div class="text-center mt-5 mr-5">
+    <div class="text-center mt-1 mr-5">
+        <img src="../../../assets/cupidon-logo.png" alt="Cupidon" style="height: 100px;">
         <h1>Find your match</h1>
         <p class="lead">Let's go and view your matches.. all you need to do is to sign up!</p>
         <button class="btn btn-info btn-lg">Learn more</button>
