--- a/client/src/app/components/member/member-edit/member-edit.component.html
+++ b/client/src/app/components/member/member-edit/member-edit.component.html
@@ -1,9 +1,9 @@
 <div class="row" *ngIf="member">
     <div class="col-4">
-        <h1>Your profile</h1>
+        <h2>Your profile</h2>
     </div>
     <div class="col-8">
-        <div class="alert alert-info" *ngIf="editForm.dirty">
+        <div class="alert alert-info" *ngIf="editForm.dirty || generalForm.dirty">
             <strong>Information: </strong> You have made changes. Any unsaved changes will be lost!
         </div>
     </div>
@@ -11,66 +11,86 @@
         <div class="card">
             <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
             <div class="card-body">
-               <div>
-                   <strong>Location: </strong>
-                   <p>{{member.city}}, {{member.country}}</p>
-               </div>
-               <div>
-                   <strong>Age: </strong>
-                   <p>{{member.age}}</p>
-               </div>
-               <div>
-                   <strong>Member since: </strong>
-                   <p>{{member.created | date:'dd. MMM, yyyy.'}}</p>
-               </div>
+                <div>
+                    <strong style="font-size: 1.2rem;">{{member.knownAs | titlecase}}</strong>
+                    <p class="text-secondary">@{{member.username}}</p>
+                </div>
+                <div *ngIf="member.city || member.country">
+                    <strong>Location: </strong>
+                    <p>{{member.city}}<span *ngIf="member.city && member.country">, </span>{{member.country}}</p>
+                </div>
+                <div>
+                    <strong>Age: </strong>
+                    <p>{{member.age}}</p>
+                </div>
+                <div>
+                    <strong>Member since: </strong>
+                    <p>{{member.created | date:'dd. MMM, yyyy.'}}</p>
+                </div>
             </div>
             <div class="card-footer">
-                <button form="editForm" type="submit" class="btn btn-primary btn-block" [disabled]="!editForm.dirty">Save changes</button>
+                <button form="editForm" type="submit" class="btn btn-primary btn-block" [disabled]="!editForm.dirty && !generalForm.dirty">Save changes</button>
             </div>
         </div>
     </div>
     <div class="col-8">
         <tabset class="member-tabset">
-            <tab heading="About {{member.knownAs}}">
-                <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
-                    <h4>Basic info</h4>
-                    <table>
-                        <tr>
-                            <td class="label">Username:</td>
-                            <td><input class="form-control" [(ngModel)]="member.username" name="username"></td>
-                        </tr>
-                        <tr>
-                            <td class="label">Alias:</td>
-                            <td><input class="form-control" [(ngModel)]="member.knownAs" name="knownAs"></td>
-                        </tr>
-                        <tr>
-                            <td class="label">Gender:</td>
-                            <td><div class="form-group text-center">
-                                <label class="radio-inline">
-                                    <input type="radio" value="male" [(ngModel)]="member.gender" name="gender"> Male
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" value="female" [(ngModel)]="member.gender" name="gender" class="ml-3"> Female
-                                </label>
-                            </div></td>
-                        </tr>
-                        <tr>
-                            <td class="label">Birthday:</td>
-                            <td><input class="form-control" 
-                                type="text"
-                                name="dateOfBirth"
-                                [(ngModel)]="member.dateOfBirth"
-                                [maxDate]="maxDate"
-                                placeholder="DD MMM YYYY"
-                                bsDatepicker
-                                [bsConfig]="bsConfig"></td>
-                        </tr>
-                    </table>
-                    <h4>Privacy</h4>
-                    <div class="form-check">
-                        <input class="form-check-input" [(ngModel)]="member.publicActivity" type="checkbox" name="publicActivity">
-                        <label class="form-check-label">Display Activity Status</label>
+            <tab heading="General">
+                <form #generalForm="ngForm" id="generalForm" (ngSubmit)="updateMember()">
+                    <div class="form-row">
+                        <div class="form-group col-8">
+                            <label>Username:</label>
+                            <input class="form-control" [(ngModel)]="member.username" name="username" placeholder="Username">
+                        </div>
                     </div>
+                    <div class="form-row">
+                        <div class="form-group col-8">
+                            <label>Alias:</label>
+                            <input class="form-control" [(ngModel)]="member.knownAs" name="knownAs" placeholder="Display name">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-8">
+                            <label class="mr-5">Gender:</label>
+                            <label class="radio-inline">
+                                <input type="radio" value="male" [(ngModel)]="member.gender" name="gender"> Male
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" value="female" [(ngModel)]="member.gender" name="gender" class="ml-3"> Female
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-8">
+                            <label>Birthday:</label>
+                            <input class="form-control" 
+                                    type="text"
+                                    name="dateOfBirth"
+                                    [(ngModel)]="member.dateOfBirth"
+                                    [maxDate]="maxDate"
+                                    placeholder="DD MMM YYYY"
+                                    bsDatepicker
+                                    [bsConfig]="bsConfig"
+                            >
+                        </div>
+                    </div>
+                    <h4>Privacy</h4>
+                    <div class="form-check col-8">
+                        <input class="form-check-input" [(ngModel)]="member.publicActivity" type="checkbox" name="publicActivity">
+                        <label class="form-check-label">Display Activity Status</label><br>
+                        <small>
+                            By choosing this option, you choose to share your online status with community.
+                        </small>
+                    </div>
+                </form>
+                <div class="row mt-5">
+                    <div class="col-8">
+                        <button class="btn-outline-danger form-control" (click)="deactivateProfile()">Deactivate profile</button>
+                    </div>
+                </div>
+            </tab>
+            <tab heading="About">
+                <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
                     <h4>Description</h4>
                     <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" cols=auto rows="6"></textarea>
                     <h4 class="mt-2">Looking for</h4>
